# jsklearn

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  MANIFEST.in  README.md  package.xml  requirements.txt  setup.py
data/common/: sin.txt
playground/predict_sin_wave/: predict.py  train.py
playground/predict_video/: plot.py  predict.py  train.py
playground/ssd_epic_kitchen/: plot.py  predict.py  train.py
src/jsklearn/: util.py
src/jsklearn/clustering/: __init__.py  gmm.py  xmeans.py
src/jsklearn/dataset/: __init__.py  video_dataset.py
src/jsklearn/dataset/epic_kitchen/: __init__.py  epic_kitchen_action_dataset.py  epic_kitchen_object_detection_dataset.py  epic_kitchen_utils.py
src/jsklearn/dataset/spartial/: __init__.py  faithful.py  scatter.py
src/jsklearn/dataset/spatial/: scatter.py
src/jsklearn/dataset/temporal/: __init__.py
src/jsklearn/dnn/: __init__.py  dem_net.py  lstm.py  rnn.py  video_dataset.py
src/jsklearn/filtering/: __init__.py  kalman.py
test/: test_kalman.py
test/data/: sin_adaptive_kalman_result.txt
