<?xml version="1.0"?>
<package>
  <name>jsklearn</name>
  <version>0.1.1</version>
  <description>Machine Learning Methods that I learned</description>
  <url>https://github.com/furushchev/jsklearn.git</url>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>BSD</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-sklearn</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
